--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,23 @@
-== README
+# Portfolio
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+[![Gem Version](https://badge.fury.io/rb/haml.svg)](http://rubygems.org/gems/rails)
 
-Things you may want to cover:
+Portfolio creado utilizando tecnología Ruby on Rails (RoR) empleando
+un template basado en Haml con JavaScript (que convertiré a CoffeeScript).
+Se utilizan varias herramientas externas para el uso del scroll, barras de
+progreso y efectos.
 
-* Ruby version
+## Gemas utilizadas
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+gem 'rails', '4.2.1'
+gem 'sqlite3'
+gem 'sass-rails', '~> 5.0'
+gem 'uglifier', '>= 1.3.0'
+gem 'coffee-rails', '~> 4.1.0'
+gem 'jquery-rails'
+gem 'turbolinks' => disabled
+gem 'jbuilder', '~> 2.0'
+gem 'sdoc', '~> 0.4.0'
+gem 'haml-rails', '~> 0.9'
+gem 'byebug'
+gem 'web-console', '~> 2.0'
